--- a/links-web/tsconfig.json
+++ b/links-web/tsconfig.json
@@ -18,7 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true, 
   },
   "include": [
     "src"
